<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rl_register"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.tuwa.smarthome.activity.UserRegisterActivity" >

    <include
        android:id="@+id/lv_item_header"
        layout="@layout/item_header" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="50dp" 
        android:background="@drawable/bg_content_base">

        <TableRow
            android:id="@+id/tableRow1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="用户名为6-18个字母或数字"
                android:textSize="@dimen/rigst_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisk"
                android:textColor="@color/color_red1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_tb_marginleft"
                android:text="姓  名" />

            <EditText
                android:id="@+id/et_realname"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="请输入姓名"
                android:textSize="@dimen/rigst_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisk"
                android:textColor="@color/color_red1" 
                android:visibility="invisible"/>
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="密  码" />

            <EditText
                android:id="@+id/et_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="密码为6-18个字母或数字"
                android:textSize="@dimen/rigst_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisk"
                android:textColor="@color/color_red1" />

            <TextView
                android:id="@+id/tv_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_tb_marginleft"
                android:text="邮箱" />

            <EditText
                android:id="@+id/et_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="请输入邮箱地址"
                android:textSize="@dimen/rigst_text_size" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisk"
                android:visibility="gone"
                android:textColor="@color/color_red1" />
        </TableRow>

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="确认密码" />

            <EditText
                android:id="@+id/et_confirmpwd"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:ems="8"
                android:hint="请再次输入密码"
                android:textSize="@dimen/rigst_text_size" />

            
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/asterisk"
                android:textColor="@color/color_red1" />

             <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/register_tb_marginleft"
                android:text="地  址" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:hint="请输入家庭地址"
                android:textSize="@dimen/rigst_text_size" />
        </TableRow>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal" >

           
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:gravity="center"
            android:paddingLeft="@dimen/register_tb_marginleft"
            android:text="@string/notice"
            android:textSize="@dimen/notice_text_size" />
    </TableLayout>

</LinearLayout>