<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/bg_base"
   
    android:orientation="vertical">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/header_padd"
        >
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/homecoo_name"
            />
<!--             android:src="@drawable/ic_homecoo_main" -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_login_exit"
            android:text="|退出"
            android:textSize="@dimen/header_text_size"
            android:layout_alignParentRight="true"
            />
         <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tv_wifi_set"
            android:text="配置 "
            android:textSize="@dimen/header_text_size"
            android:layout_toLeftOf="@id/tv_login_exit"
            />
    </RelativeLayout>
    <FrameLayout 
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingTop="10dp"
        android:foreground="@drawable/homecoo_logo"
        android:foregroundGravity="top|center_horizontal"
        >
        <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
             android:layout_gravity="center"
             android:gravity="center_horizontal"
             android:background="@drawable/background_white_corner">
         <TableLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:paddingLeft="30dp"
            android:paddingRight="30dp"
            android:paddingTop="50dp"
            android:paddingBottom="10dp"
            > 
             <TableRow
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" >
                
               <TextView
	               android:layout_width="wrap_content"
	               android:layout_height="wrap_content"
	                android:gravity="center"
	                android:textSize="@dimen/content_text_size"
	                android:text="@string/username"/>
                 <RelativeLayout 
                      android:id="@+id/userId_LinearLayout"
			          android:layout_width="200dp"
			          android:layout_height="wrap_content"
			            >
	               <EditText
	                   android:id="@+id/et_username"
	                   android:layout_width="wrap_content"
	                   android:layout_height="wrap_content"
	                   android:ems="10"
	                   android:hint="请输入用户名"
	                   android:text=""
	                    />
	               <ImageView
			            android:id="@+id/login_more_user"
			            android:layout_width="wrap_content"
			            android:layout_height="wrap_content"
			            android:layout_alignParentRight="true"
			             android:layout_marginRight="10dp"
			            android:layout_centerVertical="true"
			            android:src="@drawable/login_more_up" />
	            </RelativeLayout>
             </TableRow>
             <TableRow 
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content">
                 <TextView
	                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
	                android:text="@string/passwd"
	                android:textSize="@dimen/content_text_size"/>
                <EditText
	                android:id="@+id/et_userpwd"
	                android:inputType="textPassword"
	                android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
	                android:text=""
	                android:hint="请输入密码"
	                 />  
             </TableRow>
           </TableLayout>
           <LinearLayout 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal" >
                 <LinearLayout 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical" >

	                 <LinearLayout
	                     android:layout_width="wrap_content"
	                     android:layout_height="wrap_content"
	                     android:orientation="horizontal" >

	                     <CheckBox
	                         android:id="@+id/cb_remenmer_pwd"
	                         android:layout_width="wrap_content"
						     android:scaleX="0.7"
						     android:scaleY="0.7"
						     android:layout_height="28dp"/>

	                    <TextView 
		                  android:layout_width="wrap_content"
		                  android:layout_height="wrap_content"
		                  android:text="记住用户名和密码"
		                  android:textColor="@color/color_light_blue"
                          android:textSize="@dimen/rigst_text_size"/>
	                 </LinearLayout>
	                  <LinearLayout 
	                    android:layout_width="wrap_content"
	                    android:layout_height="wrap_content"
	                    android:orientation="horizontal"
	                    android:paddingBottom="10dp"
	                    android:layout_marginRight="10dp" >
	                    <CheckBox 
		                  android:layout_width="wrap_content"
		                  android:layout_height="20dp"
		                  android:visibility="invisible"/>
	                    <TextView
	                       android:id="@+id/bt_getback_pwd"
	                       android:layout_width="wrap_content"
	                       android:layout_height="wrap_content"
	                       android:background="@color/color_white"
	                       android:gravity="center"
	                       android:text="@string/forgetpwd"
	                       android:textColor="@color/color_light_blue"
	                       android:textSize="@dimen/rigst_text_size" />
	                 </LinearLayout>
	                 
	              </LinearLayout>
	             <LinearLayout 
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal" >
                 
                 <Button
	                android:id="@+id/bt_userRegister"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:layout_gravity="center_vertical"
	                android:background="@drawable/bt_register0"
	                />  
	             <Button
	                android:id="@+id/bt_userLogin1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                 android:layout_gravity="center_vertical"
	                android:layout_marginLeft="5dp"
	                android:background="@drawable/bt_login0"
	                />
	             </LinearLayout>
            </LinearLayout>
         </LinearLayout>
             
    </FrameLayout>
     
</LinearLayout>
